--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,10 @@
+# This source code is licensed under the
+# Creative Commons Zero v1.0 Universal License
+# (CC0 1.0 Universal / CC0 1.0)
+# https://creativecommons.org/publicdomain/zero/1.0/legalcode
+
+# Author: Lion Kortlepel / @lionkor / development@kortlepel.com
+
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 
 project(threadpool)
